--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.5",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
     "babel-jest": "^29.7.0",
     "bootstrap-icons": "^1.11.3",
     "http-proxy-middleware": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "nock": "^13.5.4",
     "react": "^18.3.1",
