--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "@wdio/allure-reporter": "^8.36.1",
     "@wdio/cli": "^8.36.1",
     "@wdio/junit-reporter": "^8.36.1",
-    "@wdio/local-runner": "^8.36.1",
-    "@wdio/mocha-framework": "^8.36.1",
+    "@wdio/local-runner": "^8.38.2",
+    "@wdio/mocha-framework": "^8.38.2",
+    "@wdio/spec-reporter": "^8.38.2",
     "concurrently": "^8.2.2",
     "wdio-wait-for": "^3.0.11"
   }
