--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -16,10 +16,10 @@ jobs:
        uses: actions/setup-node@v2
        with:
          node-version: ${{ matrix.node-version }}
-     - name: Unit checks
+     - name: Unit checks    
        run: |
-         npm ci
-         npm test
+          npm ci
+          npm test -- --reporters=jest-junit
      - name: E2E checks
        run: |
          npm start &
@@ -28,6 +28,14 @@ jobs:
      - name: Build production artifacts
        run: |
          npm run build --if-present
+
+     - name: Publish Test Results
+       uses: EnricoMi/publish-unit-test-result-action/composite@v2
+       if: always()
+       with:
+        files: |
+          junit.xml
+          reports/e2e-report/*.xml    
 
 
 
