--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "recharts": "^2.12.6"
   },
   "scripts": {
@@ -62,9 +62,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/register": "^7.23.7",
     "@wdio/allure-reporter": "^8.36.1",
-    "@wdio/cli": "^8.36.1",
+    "@wdio/cli": "^9.4.2",
     "@wdio/junit-reporter": "^8.36.1",
-    "@wdio/local-runner": "^8.38.2",
+    "@wdio/local-runner": "^9.4.2",
     "@wdio/mocha-framework": "^8.38.2",
     "@wdio/spec-reporter": "^8.38.2",
     "concurrently": "^8.2.2",
